<resources>
    <string name="app_name">NuykaLoginApp</string>
    <string name="welcome">Welcome</string>
    <string name="verify">Verify</string>
    <string name="resend_code">Re-send code</string>
    <string name="invalid_code">Invalid code - Try again</string>
    <string name="one_last_step">One Last Step</string>
    <string name="new_code_sent">New code sent</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="enter_valid_otp_number">Enter valid OTP number</string>
    <string name="enter_phone_number">Enter your phone number</string>
    <string name="request_verification">Request Verification</string>
    <string name="valid_no_required">Valid number is required</string>
    <string name="logout">Log me out</string>
    <string name="loading">Loading</string>
    <string name="change_number">Change Number</string>
    <string name="support">Support</string>
    <string name="trouble">Having Trouble Authentication?</string>
    <string name="verification_code_empty">Verification code is empty. Id is blocked by firebase. Test with another mobile number</string>
    <string name="sms_code_null">Unable to get sms code.</string>
    <string name="sign_in_fail">Unable to Sign In. Verify OTP and try again</string>
    <string name="timeout_otp_detect">Unable auto detect OTP Timeout. Please check sms and update.</string>
</resources>