<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".views.splash.SplashActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@color/black"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/logo" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:background="@android:color/white">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_marginRight="@dimen/dp_20"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/customTextView"
                    android:text="@string/welcome" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/customTextView"
                    android:text="@string/enter_phone_number" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtCountryCode"
                        style="@style/customEditTextView"
                        android:layout_width="@dimen/dp_0"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:inputType="number"
                        android:textColor="@color/black" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtPhoneNumber"
                        style="@style/customEditTextView"
                        android:layout_width="@dimen/dp_0"
                        android:layout_weight="7"
                        android:inputType="number" />


                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRequestVerification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="@dimen/dp_10"
                    android:backgroundTint="@color/black"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/request_verification" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
