<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.sushant.nuykaloginapp.views.login.viewmodel.ConfirmOtpViewModel" />
    </data>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".views.splash.SplashActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@color/black"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/logo" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="vertical"
            android:background="@android:color/white">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivTroubleshoot"
                android:gravity="end"
                android:layout_gravity="end"
                android:visibility="gone"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"
                android:src="@android:drawable/ic_menu_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDetails"
                    style="@style/customTextView"
                    android:text="@string/one_last_step" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/customTextView"
                    android:text="@string/enter_verification_code" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:orientation="horizontal"
                    android:weightSum="6">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtOtp1"
                        style="@style/customEditTextView"
                        android:layout_width="@dimen/dp_0"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="1"
                        android:imeOptions="actionNext"
                        android:tag="0"
                        android:textColor="@color/black"
                        android:text="@={viewModel.otpModel.digitOne}" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtOtp2"
                        style="@style/customEditTextView"
                        android:layout_width="@dimen/dp_0"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:layout_weight="1"
                        android:imeOptions="actionNext"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="1"
                        android:tag="1"
                        android:textColor="@color/black"
                        android:text="@={viewModel.otpModel.digitTwo}" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtOtp3"
                        style="@style/customEditTextView"
                        android:layout_width="@dimen/dp_0"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        android:maxLength="1"
                        android:tag="2"
                        android:textColor="@color/black"
                        android:text="@={viewModel.otpModel.digitThree}" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtOtp4"
                        style="@style/customEditTextView"
                        android:layout_width="@dimen/dp_0"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="1"
                        android:imeOptions="actionNext"
                        android:tag="3"
                        android:textColor="@color/black"
                        android:text="@={viewModel.otpModel.digitFour}" />


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtOtp5"
                        style="@style/customEditTextView"
                        android:layout_width="@dimen/dp_0"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="1"
                        android:tag="4"
                        android:imeOptions="actionNext"
                        android:textColor="@color/black"
                        android:text="@={viewModel.otpModel.digitFive}" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtOtp6"
                        style="@style/customEditTextView"
                        android:layout_width="@dimen/dp_0"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="1"
                        android:tag="5"
                        android:imeOptions="actionNext"
                        android:textColor="@color/black"
                        android:text="@={viewModel.otpModel.digitSix}" />


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvTimeCounter"
                        style="@style/customTextView"
                        android:layout_width="wrap_content"
                        android:layout_marginEnd="@dimen/dp_20"
                        android:textColor="@android:color/darker_gray"
                        android:text="@string/resend_code" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnVerify"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:backgroundTint="@color/black"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="end"
                        android:text="@string/verify" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
